plugins {
    id 'com.android.application'
}

android {
    compileSdkVersion 33
    useLibrary 'org.apache.http.legacy'

    defaultConfig {
        applicationId 'com.sds.android.ttpod'
        minSdkVersion 19
        targetSdkVersion 21
        versionCode 7610
        versionName "7.6.1"
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        ndk {
            abiFilters "armeabi"
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    sourceSets {
        main {
            jniLibs.srcDir 'libs'
        }
    }
    namespace 'com.sds.android.ttpod'
    lint {
        abortOnError false
    }
    packagingOptions {
        exclude("META-INF/DEPENDENCIES")
        exclude("META-INF/LICENSE")
        exclude("META-INF/LICENSE.txt")
        exclude("META-INF/license.txt")
        exclude("META-INF/NOTICE")
        exclude("META-INF/NOTICE.txt")
        exclude("META-INF/notice.txt")
        exclude("META-INF/ASL2.0")
        exclude("META-INF/*.kotlin_module")
    }
}

dependencies {
    // some dependencies
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.8.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.apache.httpcomponents:httpclient:4.5.6'
    api 'org.apache.httpcomponents:httpcore:4.4.6'
    api 'org.apache.httpcomponents:httpmime:4.3.6'

    api 'com.baidu.lbsyun:BaiduMapSDK_Location:9.3.7'
    implementation 'com.umeng.sdk:utdid:1.1.5.3'
    api 'com.tencent.mm.opensdk:wechat-sdk-android:+'
    implementation 'com.j256.ormlite:ormlite-android:5.1'
    implementation 'com.j256.ormlite:ormlite-core:5.1'
    implementation 'com.loopj.android:android-async-http:1.4.9'
    implementation 'androidx.multidex:multidex:2.0.1'  //with androidx libraries
    implementation files('libs\\open_sdk_3.5.14.3_rc26220c_lite.jar')
}
